# sky-wishes

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: keep-awake.yml
src/my_project/: crew.py  main.py
src/my_project/config/: agents.yaml  tasks.yaml
