[project]
name = "my_project"
version = "0.1.0"
description = "my_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.7.2",
    "google-generativeai>=0.8.6",
    "langchain-google-genai>=2.0.10",
    "streamlit>=1.52.2",
    "streamlit-cookies-manager>=0.2.0",
    "streamlit-extras>=0.7.8",
    "supabase>=2.16.0",
]

[project.scripts]
my_project = "my_project.main:run"
run_crew = "my_project.main:run"
train = "my_project.main:train"
replay = "my_project.main:replay"
test = "my_project.main:test"
run_with_trigger = "my_project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
